# wrslib

./: CMakeLists.txt
include/: wrc.h  wrs.h
src/: rpc.c  rpc_codec.c  rpc_codec.h  server.c  server.h  wrc.c
tests/: .gitignore  CMakeLists.txt  Makefile
tests/src/: .gitignore  cli.c  cli.h  genzip.sh  main.c  makeprg.vim  staticfs.c  webkit.c  webkit.h
tests/src/staticfs/: app.css  app.js  index.html  main.js  rpc.js  tab_audio.js  tab_chart.js  tab_chartjs.js  tab_rpc.js  wsocket.js
tests/src/staticfs/libs/chart.js/: README
tests/src/staticfs/libs/webix/: contrast_custom.css
tests/src/staticfs/libs/webix_components/: ace.js  chartjs.js  dygraph.js  file_selector.js  highcharts.js
